# brainhack

./: .gitignore  Cargo.toml  LICENSE  PROPOSAL.md  README.md
benches/: add16.rs
src/: coder.rs  lib.rs  main.rs  test.rs
src/examples/: add.asm  add.bf  fill.asm  max.asm  max.bf  rect.asm
src/hackfuck/: consts.rs  instruction.rs  interpreter.rs  parser.rs  tape.rs  utils.rs
src/interpreter/: brainfuck.rs  consts.rs  instruction.rs  interpreter.rs  mod.rs  parser.rs  tape.rs  utils.rs
src/traits/: arith.rs  binary.rs  branch.rs  core.rs  logic.rs  memory.rs  mod.rs  seek.rs
