[package]
name = "brainhack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
itertools = "0.10.5"
pest = "2.5.5"
pest_derive = "2.5.5"
sdl2 = "0.35.2"

[dev-dependencies]
brainfuck = "0.2.1"
criterion = "0.4.0"
pretty_assertions = "1.3.0"
